Fix sparkle/cloud positioning to match reference image
- Sparkle at top-left corner of image
- Cloud at bottom-right corner of image
- Both positioned to overlap the image edges exactly as in reference

--- a/styles.css
+++ b/styles.css
@@ -114,18 +114,17 @@ body {
 }
 
 .sparkle-top {
-  top: -60px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 160px;
+  top: -35px;
+  left: -35px;
+  width: 120px;
   height: auto;
 }
 
 .cloud {
   position: absolute;
-  bottom: -70px;
-  right: -60px;
-  width: 220px;
+  bottom: -50px;
+  right: -40px;
+  width: 180px;
   height: auto;
   z-index: 10;
 }
@@ -325,16 +324,15 @@ body {
   }
 
   .sparkle-top {
-    top: -45px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 110px;
+    top: -25px;
+    left: -25px;
+    width: 90px;
   }
 
   .cloud {
-    bottom: -55px;
-    right: -45px;
-    width: 160px;
+    bottom: -40px;
+    right: -30px;
+    width: 140px;
   }
 
   .showcase {
